@@ -25,6 +25,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 
+
 @RestController
 @RequestMapping("/auth")
 @RequiredArgsConstructor
@@ -34,33 +35,31 @@ public class AuthController {
     private final JwtUtils jwtUtils;
 
     @PostMapping("/register-user")
-    public ResponseEntity<?> registerUser(User user){
+    public ResponseEntity<?> registerUser(@RequestBody User user){
         try{
             userService.registerUser(user);
-            return ResponseEntity.ok("Registration Successfully");
+            return ResponseEntity.ok("Registration successful!");
 
-        }
-        catch (UserAlreadyExistsException e){
+        }catch (UserAlreadyExistsException e){
             return ResponseEntity.status(HttpStatus.CONFLICT).body(e.getMessage());
-
         }
     }
 
     @PostMapping("/login")
     public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest request){
-        Authentication authentication = authenticationManager
-                .authenticate(new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword()));
+        Authentication authentication =
+                authenticationManager
+                        .authenticate(new UsernamePasswordAuthenticationToken(request.getEmail(), request.getPassword()));
         SecurityContextHolder.getContext().setAuthentication(authentication);
         String jwt = jwtUtils.generateJwtTokenForUser(authentication);
         HotelUserDetails userDetails = (HotelUserDetails) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities()
-                                    .stream()
-                                    .map(GrantedAuthority::getAuthority).collect(Collectors.toList());
+                .stream()
+                .map(GrantedAuthority::getAuthority).toList();
         return ResponseEntity.ok(new JwtResponse(
                 userDetails.getId(),
                 userDetails.getEmail(),
                 jwt,
-                roles
-        ));
+                roles));
     }
 }
